instagram and strava updates from 2016-12-12

--- a/instagram15.html
+++ b/instagram15.html
@@ -6,6 +6,101 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000636.jpg" title="Cold maiden voyage for a teammate's fatbike this morning. #2fat2furious #fatbike #lovestarfactoryteam #bikewinter #cycling " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold maiden voyage for a teammate's fatbike this morning. #2fat2furious #fatbike #lovestarfactoryteam #bikewinter #cycling </small>
+                           </div>
+                           <img src="../lsphotos/image000636.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000637.jpg" title="Winter bike bonanza! #lsb #lovestarfactoryteam #itsnotthatcold" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Winter bike bonanza! #lsb #lovestarfactoryteam #itsnotthatcold</small>
+                           </div>
+                           <img src="../lsphotos/image000637.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000192.jpg" title="Ravines = Illinois elevation. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Ravines = Illinois elevation. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking </small>
+                           </div>
+                           <img src="../lsphotos/image000192.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000193.jpg" title="Powder & negative temps for this morning's commute. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Powder & negative temps for this morning's commute. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking </small>
+                           </div>
+                           <img src="../lsphotos/image000193.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000194.jpg" title="Cold, dark & powder. #fatbike #nightride #lovestarbicyclebags #cycling #bikewinter " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold, dark & powder. #fatbike #nightride #lovestarbicyclebags #cycling #bikewinter </small>
+                           </div>
+                           <img src="../lsphotos/image000194.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000195.jpg" title="Toasty in her micro-pogies! #babySNUB #lovestarbicyclebags #pogies #fatbike #clearybikes #adventuredad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Toasty in her micro-pogies! #babySNUB #lovestarbicyclebags #pogies #fatbike #clearybikes #adventuredad</small>
+                           </div>
+                           <img src="../lsphotos/image000195.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000196.jpg" title="More awesome custom gear!  So cool! #clearygecko #clearybikes #Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>clearybikes</h4>
+                              <small>More awesome custom gear!  So cool! #clearygecko #clearybikes #Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000196.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000197.jpg" title="Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -172,97 +267,6 @@ Angry sky & punishing winds for today's #raphafestive500 ride. #cycling #cyclocr
                               <small>Finally getting some snow under these tire's! #fatbike #festive500 #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bicycle #raphafestive500</small>
                            </div>
                            <img src="../lsphotos/image000207.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000208.jpg" title="Driving snow, soul crushing wind & 10psi made for a short #raphafestive500 ride today. #fatbike #cycling #bicycle #festive500 #lovestarbicyclebags #bikepackingbags #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Driving snow, soul crushing wind & 10psi made for a short #raphafestive500 ride today. #fatbike #cycling #bicycle #festive500 #lovestarbicyclebags #bikepackingbags #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000208.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000639.jpg" title="Angry sky & punishing winds for today's #raphafestive500 ride. #cycling #cyclocross #cx #moots #psychloX #bicycle #lakemichigan #lovestarfactoryteam #festive500" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Angry sky & punishing winds for today's #raphafestive500 ride. #cycling #cyclocross #cx #moots #psychloX #bicycle #lakemichigan #lovestarfactoryteam #festive500</small>
-                           </div>
-                           <img src="../lsphotos/image000639.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000209.jpg" title="Didn't think I'd see this much grass this time of year... #elniño #elninoisspanishforthenino #christmaslights #cycling #cyclocross #cx #moots #lovestarbicyclebags #raphafestive500 #festive500" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Didn't think I'd see this much grass this time of year... #elniño #elninoisspanishforthenino #christmaslights #cycling #cyclocross #cx #moots #lovestarbicyclebags #raphafestive500 #festive500</small>
-                           </div>
-                           <img src="../lsphotos/image000209.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000640.jpg" title="Christmas Eve ride...complete with detour to see the #HomeAlone house. #buzzyourgirlfriendwoof #cycling #moots #lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Christmas Eve ride...complete with detour to see the #HomeAlone house. #buzzyourgirlfriendwoof #cycling #moots #lovestarfactoryteam #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000640.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000210.jpg" title="Christmas Eve adventures. #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Christmas Eve adventures. #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000210.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000211.jpg" title="Sunset ride. #fatbike #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunset ride. #fatbike #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000211.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000082.jpg" title="So muddy. So fun. #hughjassfatbikeseries #fatbike #lovestarfactoryteam #lovestarbicyclebags #championsystem" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>So muddy. So fun. #hughjassfatbikeseries #fatbike #lovestarfactoryteam #lovestarbicyclebags #championsystem</small>
-                           </div>
-                           <img src="../lsphotos/image000082.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
