--- a/instagram25.html
+++ b/instagram25.html
@@ -6,6 +6,105 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000291.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000291.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000292.jpg" title="Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000292.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000293.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000293.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000294.jpg" title="Up close. #lovestarbicyclebags #handmade #bikepacking #framebag #cycling #bikechi #bicycle #fatbike #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Up close. #lovestarbicyclebags #handmade #bikepacking #framebag #cycling #bikechi #bicycle #fatbike #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000294.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000295.jpg" title="Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #fatbike #cyclist #bicycle #cycling #bicyclebag #handmade #framebag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000295.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000731.jpg" title="#LovestarFactoryTeam and our littlest mechanic." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#LovestarFactoryTeam and our littlest mechanic.</small>
+                           </div>
+                           <img src="../lsphotos/image000731.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000732.jpg" title="#SpeedLimit #LovestarFactoryTeam #LSB" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#SpeedLimit #LovestarFactoryTeam #LSB</small>
+                           </div>
+                           <img src="../lsphotos/image000732.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000733.jpg" title="Comin' in hot. #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -172,101 +271,6 @@
                               <small>Color match test... #bikepacking #framebag #handmade #lovestarbicyclebags #bicyclebag #cycling #fatbike #bicycle #bikechi #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000302.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000303.jpg" title="#lovestarbicyclebags custom #framebag begins. It's been a while since I made anything for my own bikes...nothing like high contrast stitching to make a bag pop. #handmade #bicycle #bicyclebag #bikepacking #cycling #bikechi #fatbike #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarbicyclebags custom #framebag begins. It's been a while since I made anything for my own bikes...nothing like high contrast stitching to make a bag pop. #handmade #bicycle #bicyclebag #bikepacking #cycling #bikechi #fatbike #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000303.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000304.jpg" title="#lovestarbicyclebags feed bag prototype. Some adjustments to be made, before a beta test version will be ready, but not a bad first pass. #handmade #bikepacking #cycling #bicyclebag #bicycle #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarbicyclebags feed bag prototype. Some adjustments to be made, before a beta test version will be ready, but not a bad first pass. #handmade #bikepacking #cycling #bicyclebag #bicycle #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image000304.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000305.jpg" title="Prototype #lovestarbicyclebags feed bag. Part of a larger #bikepacking set up, these little bags can be invaluable for bike adventures. This was a first draft, plenty of things to be tweaked, but hoping to have a beta test model ready soon! #handmade #bicycle #bicyclebag #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Prototype #lovestarbicyclebags feed bag. Part of a larger #bikepacking set up, these little bags can be invaluable for bike adventures. This was a first draft, plenty of things to be tweaked, but hoping to have a beta test model ready soon! #handmade #bicycle #bicyclebag #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000305.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000306.jpg" title="Sometimes you just *have* to ride, even in the pouring rain. Like &quot;Dad&quot; says, &quot;character building&quot; #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Sometimes you just *have* to ride, even in the pouring rain. Like "Dad" says, "character building" #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000306.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000739.jpg" title="Rainy team ride this morning. #cycling #bicycle #Chicago #moots #rainride #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Rainy team ride this morning. #cycling #bicycle #Chicago #moots #rainride #bikechi #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000739.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000307.jpg" title="Came home to a big fabric delivery! #lovestarbicyclebags #cycling #bikepacking #bicyclebag #bicycle #handmade #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Came home to a big fabric delivery! #lovestarbicyclebags #cycling #bikepacking #bicyclebag #bicycle #handmade #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000307.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000740.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>fatbikee</h4>
-                              <small>#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000740.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
