--- a/instagram3.html
+++ b/instagram3.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000034.jpg" title="Focused on his Focus. #focusbikes #lovestarraceclub #carpentercx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Focused on his Focus. #focusbikes #lovestarraceclub #carpentercx</small>
+                           </div>
+                           <img src="../lsphotos/image000034.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000035.jpg" title="Gritty & grey this morning for today's ride. Definitely feeling like cyclocross weather. #cycling #bicycle #cyclocross #cx #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Gritty & grey this morning for today's ride. Definitely feeling like cyclocross weather. #cycling #bicycle #cyclocross #cx #bikechi #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000035.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000036.jpg" title="Fast ride North this morning to meet up with  my Dad for a scenic ride home. #bicycle #cycling #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fast ride North this morning to meet up with  my Dad for a scenic ride home. #bicycle #cycling #bikechi #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000036.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000094.jpg" title="Racing stripes on a custom #LovestarBicycleBags SaddlePack. #handmade #bicyclebag #cycling #bicycle #bikechi #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Racing stripes on a custom #LovestarBicycleBags SaddlePack. #handmade #bicyclebag #cycling #bicycle #bikechi #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000094.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000037.jpg" title="Sunrise miles & smiles. #LovestarRaceClub #cycling #bicycle #bikechi #coffeeride" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise miles & smiles. #LovestarRaceClub #cycling #bicycle #bikechi #coffeeride</small>
+                           </div>
+                           <img src="../lsphotos/image000037.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000095.jpg" title="Custom #LovestarBicycleBags top tube bag. #bikepacking #cycling #bicyclebag #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #LovestarBicycleBags top tube bag. #bikepacking #cycling #bicyclebag #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000095.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000096.jpg" title="Custom #LoveStarBicycleBags top tube bag in Black & Pink. #handmade #bicyclebag #cycling #bikepacking #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #LoveStarBicycleBags top tube bag in Black & Pink. #handmade #bicyclebag #cycling #bikepacking #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000096.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000038.jpg" title="Mini epic. #LovestarRaceClub #bicycle #cx #chicrosscup #babySNUB #cyclocross" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>@theandyhudson looking like he got a workout this morning 🚲😅 #cycling #bicycle #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000049.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000050.jpg" title="Thanks to @theandyhudson @ddave12000 & Ben M. For keeping me motivated when getting up to ride in the dark gets hard. And here's a picture of my bike...because it's new and I'm obsessed with it. #cycling #bicycle #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Thanks to @theandyhudson @ddave12000 & Ben M. For keeping me motivated when getting up to ride in the dark gets hard. And here's a picture of my bike...because it's new and I'm obsessed with it. #cycling #bicycle #ridecannondale #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000050.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000051.jpg" title="Good morning to you, too, #shelfcloud #sudzon #lovestarraceclub #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Good morning to you, too, #shelfcloud #sudzon #lovestarraceclub #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000051.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000052.jpg" title="Storm vibes at the end of this morning's ride. #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Storm vibes at the end of this morning's ride. #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000052.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000053.jpg" title="New bike day!!! Glorious sunrise ride this morning. Thanks to @ponylou and the rest of my Pony Shop peeps for putting up with my decision making process 🚲🙌 #newbikeday #cycling #superX #ridecannondale #lovestarraceclub #baaw #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New bike day!!! Glorious sunrise ride this morning. Thanks to @ponylou and the rest of my Pony Shop peeps for putting up with my decision making process 🚲🙌 #newbikeday #cycling #superX #ridecannondale #lovestarraceclub #baaw #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000053.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000054.jpg" title="First time at @backlotcoffee first nitro! #yum #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>First time at @backlotcoffee first nitro! #yum #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000054.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000542.jpg" title="From Sunday, a stylized @agonz21 crushing a turn at #chicrosscup. #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>From Sunday, a stylized @agonz21 crushing a turn at #chicrosscup. #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000542.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000098.jpg" title="Because black goes with everything. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Because black goes with everything. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000098.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
