--- a/instagram32.html
+++ b/instagram32.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000405.jpg" title="Lovestar Factory Team racing in snow and icy conditions today in Indian Lakes. Great race! #lovestarfactoryteam #lovestarbicyclebags #lovestar #chicagocycling #chicagocyclocross #chicagoracing #cycling #cyclocrosschicago #cyclocross" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Lovestar Factory Team racing in snow and icy conditions today in Indian Lakes. Great race! #lovestarfactoryteam #lovestarbicyclebags #lovestar #chicagocycling #chicagocyclocross #chicagoracing #cycling #cyclocrosschicago #cyclocross</small>
+                           </div>
+                           <img src="../lsphotos/image000405.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000406.jpg" title="Lovestar Factory Team racing in snow and icy conditions today! Great race guys! #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago #cyclocross #chicagocycling #elliotlovestar" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Lovestar Factory Team racing in snow and icy conditions today! Great race guys! #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago #cyclocross #chicagocycling #elliotlovestar</small>
+                           </div>
+                           <img src="../lsphotos/image000406.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000407.jpg" title="Yesterday's #ILRcx course was fun & challenging with lots of sand and cold weather...today's race is looking quite snowy so it will be interesting to see how the course has changed in just 24 hours... #cyclocross #cycling #chicago #chicagocrosscup #cx #bikechi #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Yesterday's #ILRcx course was fun & challenging with lots of sand and cold weather...today's race is looking quite snowy so it will be interesting to see how the course has changed in just 24 hours... #cyclocross #cycling #chicago #chicagocrosscup #cx #bikechi #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000407.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000408.jpg" title="Lovestar Factory Team riders going head to head in the sandpits at #ILRcx yesterday #cyclocross #cycling #cx #sandpit #crossisboss #chicago #chicagocrosscup #bikechi #lovestarbicycles #lovestarbicyclebags #championsystem" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team riders going head to head in the sandpits at #ILRcx yesterday #cyclocross #cycling #cx #sandpit #crossisboss #chicago #chicagocrosscup #bikechi #lovestarbicycles #lovestarbicyclebags #championsystem</small>
+                           </div>
+                           <img src="../lsphotos/image000408.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000409.jpg" title="One more #PSIcx pic from #jayloophotography it was a tough race (my first post injury ride) but had a good time despite the hurt #cyclocross #cx #paincave #bikechi #cycling #defeet #giroempire #lazersport #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>One more #PSIcx pic from #jayloophotography it was a tough race (my first post injury ride) but had a good time despite the hurt #cyclocross #cx #paincave #bikechi #cycling #defeet #giroempire #lazersport #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000409.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000410.jpg" title="Killer #PSIcx photos from @jayloophotography #cyclocross #lovestarbicyclebags #cx #bikechi #moots #lazersport #defeet #giro" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Killer #PSIcx photos from @jayloophotography #cyclocross #lovestarbicyclebags #cx #bikechi #moots #lazersport #defeet #giro</small>
+                           </div>
+                           <img src="../lsphotos/image000410.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000411.jpg" title="Lovestar Factory Team at the line for #PSIcx this weekend. #cyclocross #lovestarbicyclebags #lovestarbicycles #cycling #cx #chicagocx #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team at the line for #PSIcx this weekend. #cyclocross #lovestarbicyclebags #lovestarbicycles #cycling #cx #chicagocx #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000411.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000412.jpg" title="Fixing a flat in the middle of the woods...beautiful ride on the #DPRT today with the Lovestar Factory Team #cycling #cyclocross #lovestarbicyclebags #lovestarbicycles #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>Stepped up my cat-6 game today. Long ride into work rockin the matching helmet and backpack... #cycling #bikecommute #cat6 #cyclocross #championsystem #stylesformiles #bikechi #lovestarbicycles #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000424.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000425.jpg" title="Barrier & run up practice all in one. #dprt #cyclocross #cx #lovestarbicycles #lovestarbicyclebags #cycling #bikechi #moots #psychloX" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Barrier & run up practice all in one. #dprt #cyclocross #cx #lovestarbicycles #lovestarbicyclebags #cycling #bikechi #moots #psychloX</small>
-                           </div>
-                           <img src="../lsphotos/image000425.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000426.jpg" title="2nd day this week riding the #DPRT I love Riding in the fall. #cyclocross #cx #moots #gravel #gravelgrinder #bikechi #lovestarbicycles #lovestarbicyclebags #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>2nd day this week riding the #DPRT I love Riding in the fall. #cyclocross #cx #moots #gravel #gravelgrinder #bikechi #lovestarbicycles #lovestarbicyclebags #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000426.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000427.jpg" title="Moots PsychloX in the wild. #moots #cyclocross #cx #chicago #bikechi #lovestarbicycles #lovestarbicyclebags #dprt" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Moots PsychloX in the wild. #moots #cyclocross #cx #chicago #bikechi #lovestarbicycles #lovestarbicyclebags #dprt</small>
-                           </div>
-                           <img src="../lsphotos/image000427.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000428.jpg" title="I have to admit, the DPR Trail in the fall is pretty hard to beat. #chicago #bikechi #cyclocross #cx #gravel #gravelgrinder #moots #lovestarbicycles #lovestarbicyclebags #dprt #desplainsrivertrail" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>I have to admit, the DPR Trail in the fall is pretty hard to beat. #chicago #bikechi #cyclocross #cx #gravel #gravelgrinder #moots #lovestarbicycles #lovestarbicyclebags #dprt #desplainsrivertrail</small>
-                           </div>
-                           <img src="../lsphotos/image000428.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000429.jpg" title="Sampling some fine double track in the North suburbs of #chicago it's amazing what you can find If you know where to look. #cyclocross #gravel #gravelgrinder #cx #bikechi #lovestarbicycles #lovestarbicyclebags #lazersport #championsystem" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sampling some fine double track in the North suburbs of #chicago it's amazing what you can find If you know where to look. #cyclocross #gravel #gravelgrinder #cx #bikechi #lovestarbicycles #lovestarbicyclebags #lazersport #championsystem</small>
-                           </div>
-                           <img src="../lsphotos/image000429.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000430.jpg" title="Helping Daddy back to the staging area : ). #elliotlovestar  #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago #cyclocross #bestpitcrew #bikeracing #bestdadever #bikechicago #bikechi #cantwaitforatwowheeler" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Helping Daddy back to the staging area : ). #elliotlovestar  #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago #cyclocross #bestpitcrew #bikeracing #bestdadever #bikechicago #bikechi #cantwaitforatwowheeler</small>
-                           </div>
-                           <img src="../lsphotos/image000430.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000431.jpg" title="Lovestar Factory Team today at Caldwell Woods for the start of the Chicago Cross Cup season. Ride tote race and then had a great time killing it on the course. #chicagoCX #bikechi #cyclocross #cycling #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team today at Caldwell Woods for the start of the Chicago Cross Cup season. Ride tote race and then had a great time killing it on the course. #chicagoCX #bikechi #cyclocross #cycling #lovestarbicycles #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000431.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
