--- a/instagram10.html
+++ b/instagram10.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000593.jpg" title="Sunrise ride. #moots #parlee #cycling #lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride. #moots #parlee #cycling #lovestarfactoryteam #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000593.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000135.jpg" title="Repost from @oliviabeaty ...great shot of her custom #lovestarbicyclebags SaddlePack and all sorts of color match goodness. #handmade #bicyclebag #cycling #custom #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Repost from @oliviabeaty ...great shot of her custom #lovestarbicyclebags SaddlePack and all sorts of color match goodness. #handmade #bicyclebag #cycling #custom #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000135.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000136.jpg" title="@agonz21 crushing cafe sprints this morning. #lovestarbicyclebags #lovestarfactoryteam #cycling #parlee #parleecycles #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@agonz21 crushing cafe sprints this morning. #lovestarbicyclebags #lovestarfactoryteam #cycling #parlee #parleecycles #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000136.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000137.jpg" title="#lovestarbicyclebags Shop apron / snack dispenser. #shoplife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarbicyclebags Shop apron / snack dispenser. #shoplife</small>
+                           </div>
+                           <img src="../lsphotos/image000137.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000594.jpg" title="Stud. #lovestarfactoryteam #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Stud. #lovestarfactoryteam #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000594.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000595.jpg" title="Crazy wind and heavy wet fog this morning with @ddave12000 & @theandyhudson #lovestarfactoryteam #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Crazy wind and heavy wet fog this morning with @ddave12000 & @theandyhudson #lovestarfactoryteam #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000595.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000138.jpg" title="Finished up a fun custom #lovestarbicyclebags SaddlePack tonight. #handmade #bicyclebag #bikepacking #cycling #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a fun custom #lovestarbicyclebags SaddlePack tonight. #handmade #bicyclebag #bikepacking #cycling #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000138.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000596.jpg" title="Scenic Sunrise Solo #cycling #bicycle #moots #psychloX #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>Mini group ride. #lovestarfactoryteam #striderbikes #clearybikes #teammates</small>
                            </div>
                            <img src="../lsphotos/image000605.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000142.jpg" title="Calm #bicycle #moots #cycling #lovestarbicyclebags #lakemichigan #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Calm #bicycle #moots #cycling #lovestarbicyclebags #lakemichigan #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000142.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000606.jpg" title="Found some local Cobbles this morning. #HellOfTheNorthShore #cycling #moots #bicycle #pave #cobbles #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Found some local Cobbles this morning. #HellOfTheNorthShore #cycling #moots #bicycle #pave #cobbles #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000606.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000143.jpg" title="Finished up a slick Black and Lime #lovestarbicyclebags SaddlePack tonight. #handmade #custom #bicyclebag #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a slick Black and Lime #lovestarbicyclebags SaddlePack tonight. #handmade #custom #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000143.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000607.jpg" title="Gravel Train. #lovestarfactoryteam #cycling #cyclocross #gravelgrinder #dprt" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gravel Train. #lovestarfactoryteam #cycling #cyclocross #gravelgrinder #dprt</small>
-                           </div>
-                           <img src="../lsphotos/image000607.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000608.jpg" title="Very muddy & windy ride with an awesome crew today. #lovestarfactoryteam #cycling #gravelgrinder #dprt" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Very muddy & windy ride with an awesome crew today. #lovestarfactoryteam #cycling #gravelgrinder #dprt</small>
-                           </div>
-                           <img src="../lsphotos/image000608.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000144.jpg" title="A nice #shoplocal kind of morning. #otherbrothercoffee #ponyshop #lovestarbicyclebags #shoplife #bikemechanic #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A nice #shoplocal kind of morning. #otherbrothercoffee #ponyshop #lovestarbicyclebags #shoplife #bikemechanic #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000144.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000145.jpg" title="Lots of heavy-duty blue Cordura on the interior...#lovestarbicyclebags #handmade #bikepacking #bikepackingbags #framebag #cycling #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lots of heavy-duty blue Cordura on the interior...#lovestarbicyclebags #handmade #bikepacking #bikepackingbags #framebag #cycling #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000145.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
