--- a/instagram13.html
+++ b/instagram13.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000165.jpg" title="Exploring. #adventuredad #futurecyclist #clearybikes #cycling #bicycle #babySNUB #babyARC #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Exploring. #adventuredad #futurecyclist #clearybikes #cycling #bicycle #babySNUB #babyARC #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000165.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000166.jpg" title="60 degrees! Bike washing marathon complete with sun drying service. #bikemechanic #lovestarbicyclebags #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>60 degrees! Bike washing marathon complete with sun drying service. #bikemechanic #lovestarbicyclebags #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000166.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000167.jpg" title="So proud to see my son as well as his custom bike bag company featured in the 2016 Novara Catalog!  #lovestarbicyclebags #lovestar #custombicyclebags #cyclingchicago #lovestarcyclingteam #cycling #cyclocross #cyclocrosschicago #cyclocrossinthemidwest" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>So proud to see my son as well as his custom bike bag company featured in the 2016 Novara Catalog!  #lovestarbicyclebags #lovestar #custombicyclebags #cyclingchicago #lovestarcyclingteam #cycling #cyclocross #cyclocrosschicago #cyclocrossinthemidwest</small>
+                           </div>
+                           <img src="../lsphotos/image000167.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000168.jpg" title="Silver Lake Highline Trail. #fatbike #cycling #lovestarbicyclebags #bikewinter #bicycle #pogies #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Silver Lake Highline Trail. #fatbike #cycling #lovestarbicyclebags #bikewinter #bicycle #pogies #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000168.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000169.jpg" title="Riding groomers at Silver Lake. #fatbike #cycling #bikewinter #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Riding groomers at Silver Lake. #fatbike #cycling #bikewinter #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000169.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000170.jpg" title="Shortly before I said farewell to REI, I had the opportunity to be a part of a photo shoot for the @rei 2016 Novara catalogue. They outfitted me with a bike, sent a camera crew and followed me around while I rode around the North Shore. It was a fun experience...and today I was able to snag a copy of the finished product. Some custom #lovestarbicyclebags that I had made for the bike were featured along with @otherbrothercoffee who graciously hosted me and the camera crew on the morning of the shoot. #REI #Novara #cycling #bikecommute #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Shortly before I said farewell to REI, I had the opportunity to be a part of a photo shoot for the @rei 2016 Novara catalogue. They outfitted me with a bike, sent a camera crew and followed me around while I rode around the North Shore. It was a fun experience...and today I was able to snag a copy of the finished product. Some custom #lovestarbicyclebags that I had made for the bike were featured along with @otherbrothercoffee who graciously hosted me and the camera crew on the morning of the shoot. #REI #Novara #cycling #bikecommute #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000170.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000171.jpg" title="Cold sunrise ride. #cycling #bikewinter #moots #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold sunrise ride. #cycling #bikewinter #moots #psychloX #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000171.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000623.jpg" title="After today's summery February ride. #LovestarFactoryTeam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>theandyhudson</h4>
@@ -168,97 +259,6 @@
                               <small>Sunset. #fatbike #bikepackingbags #bikepacking #cycling #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000176.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000177.jpg" title="Sunshine & warmer temps today! Getting in a quick spin before the snow comes back. #cycling #bikewinter #moots #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunshine & warmer temps today! Getting in a quick spin before the snow comes back. #cycling #bikewinter #moots #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000177.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000631.jpg" title="Some very Belgian weather this afternoon. #cycling #bikewinter #moots #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Some very Belgian weather this afternoon. #cycling #bikewinter #moots #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000631.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000632.jpg" title="Today. #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Today. #cycling #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000632.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000633.jpg" title="Putting in some miles on a gorgeous morning. #cycling #bikewinter #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Putting in some miles on a gorgeous morning. #cycling #bikewinter #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000633.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000634.jpg" title="Getting a little rad on today's Goonies ride.  #fatbike #bikewinter #lovestarfactoryteam #cycling " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Getting a little rad on today's Goonies ride.  #fatbike #bikewinter #lovestarfactoryteam #cycling </small>
-                           </div>
-                           <img src="../lsphotos/image000634.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000178.jpg" title="Somebody was just a little proud of the Pogies she helped make. #babySNUB #adventuredad #bikewinter #lovestarbicyclebags #clearybikes #handmade #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Somebody was just a little proud of the Pogies she helped make. #babySNUB #adventuredad #bikewinter #lovestarbicyclebags #clearybikes #handmade #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000178.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000179.jpg" title="#babySNUB in the workshop helping add some snaps to her Micro Pogies. #handmade #lovestarbicyclebags #bikewinter " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babySNUB in the workshop helping add some snaps to her Micro Pogies. #handmade #lovestarbicyclebags #bikewinter </small>
-                           </div>
-                           <img src="../lsphotos/image000179.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
