--- a/instagram14.html
+++ b/instagram14.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000177.jpg" title="Sunshine & warmer temps today! Getting in a quick spin before the snow comes back. #cycling #bikewinter #moots #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunshine & warmer temps today! Getting in a quick spin before the snow comes back. #cycling #bikewinter #moots #lovestarfactoryteam #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000177.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000631.jpg" title="Some very Belgian weather this afternoon. #cycling #bikewinter #moots #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some very Belgian weather this afternoon. #cycling #bikewinter #moots #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000631.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000632.jpg" title="Today. #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Today. #cycling #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000632.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000633.jpg" title="Putting in some miles on a gorgeous morning. #cycling #bikewinter #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Putting in some miles on a gorgeous morning. #cycling #bikewinter #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000633.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000634.jpg" title="Getting a little rad on today's Goonies ride.  #fatbike #bikewinter #lovestarfactoryteam #cycling " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Getting a little rad on today's Goonies ride.  #fatbike #bikewinter #lovestarfactoryteam #cycling </small>
+                           </div>
+                           <img src="../lsphotos/image000634.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000178.jpg" title="Somebody was just a little proud of the Pogies she helped make. #babySNUB #adventuredad #bikewinter #lovestarbicyclebags #clearybikes #handmade #SewRad " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Somebody was just a little proud of the Pogies she helped make. #babySNUB #adventuredad #bikewinter #lovestarbicyclebags #clearybikes #handmade #SewRad </small>
+                           </div>
+                           <img src="../lsphotos/image000178.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000179.jpg" title="#babySNUB in the workshop helping add some snaps to her Micro Pogies. #handmade #lovestarbicyclebags #bikewinter " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babySNUB in the workshop helping add some snaps to her Micro Pogies. #handmade #lovestarbicyclebags #bikewinter </small>
+                           </div>
+                           <img src="../lsphotos/image000179.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000180.jpg" title="Cold morning Ride. #lovestarfactoryteam #lovestarbicyclebags #bikewinter #cycling #moots " rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,101 +259,6 @@
                               <small>#lovestarfactoryteam Rollin' fat into the coffee shop. #fatbike #bikewinter #cycling #2fat2furious #stupidcarruinedmypicture </small>
                            </div>
                            <img src="../lsphotos/image000635.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000636.jpg" title="Cold maiden voyage for a teammate's fatbike this morning. #2fat2furious #fatbike #lovestarfactoryteam #bikewinter #cycling " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold maiden voyage for a teammate's fatbike this morning. #2fat2furious #fatbike #lovestarfactoryteam #bikewinter #cycling </small>
-                           </div>
-                           <img src="../lsphotos/image000636.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000637.jpg" title="Winter bike bonanza! #lsb #lovestarfactoryteam #itsnotthatcold" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Winter bike bonanza! #lsb #lovestarfactoryteam #itsnotthatcold</small>
-                           </div>
-                           <img src="../lsphotos/image000637.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000192.jpg" title="Ravines = Illinois elevation. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Ravines = Illinois elevation. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking </small>
-                           </div>
-                           <img src="../lsphotos/image000192.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000193.jpg" title="Powder & negative temps for this morning's commute. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Powder & negative temps for this morning's commute. #fatbike #bikewinter #lovestarbicyclebags #bikepackingbags #bikepacking </small>
-                           </div>
-                           <img src="../lsphotos/image000193.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000194.jpg" title="Cold, dark & powder. #fatbike #nightride #lovestarbicyclebags #cycling #bikewinter " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold, dark & powder. #fatbike #nightride #lovestarbicyclebags #cycling #bikewinter </small>
-                           </div>
-                           <img src="../lsphotos/image000194.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000195.jpg" title="Toasty in her micro-pogies! #babySNUB #lovestarbicyclebags #pogies #fatbike #clearybikes #adventuredad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Toasty in her micro-pogies! #babySNUB #lovestarbicyclebags #pogies #fatbike #clearybikes #adventuredad</small>
-                           </div>
-                           <img src="../lsphotos/image000195.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000196.jpg" title="More awesome custom gear!  So cool! #clearygecko #clearybikes #Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>clearybikes</h4>
-                              <small>More awesome custom gear!  So cool! #clearygecko #clearybikes #Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000196.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
