--- a/instagram19.html
+++ b/instagram19.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000233.jpg" title="Exciting race. Tough conditions. #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cycling #cyclinginthemidwest" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Exciting race. Tough conditions. #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cycling #cyclinginthemidwest</small>
+                           </div>
+                           <img src="../lsphotos/image000233.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000234.jpg" title="First race, great ride! #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>First race, great ride! #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000234.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000235.jpg" title="Lining up for that steep downhill switchback turn!!! And deep mud... #lovestarfactoryteam #lovestarbicyclebags #greatriding #greatrace #cyclocrosschicago #cyclocross #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Lining up for that steep downhill switchback turn!!! And deep mud... #lovestarfactoryteam #lovestarbicyclebags #greatriding #greatrace #cyclocrosschicago #cyclocross #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000235.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000236.jpg" title="First medal : ) #lovestarfactoryteam #lovestarbicyclebags #cycling #youngestontheteam #firstrace #cyclocrosschicago" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>First medal : ) #lovestarfactoryteam #lovestarbicyclebags #cycling #youngestontheteam #firstrace #cyclocrosschicago</small>
+                           </div>
+                           <img src="../lsphotos/image000236.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000237.jpg" title="Pushing through on a tough course! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrossinthemidwest" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Pushing through on a tough course! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrossinthemidwest</small>
+                           </div>
+                           <img src="../lsphotos/image000237.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000238.jpg" title="Congratulations to Dave of Lovestar Factory Team for making it to the podium today! Tough race, great ride!! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cylcocrossinthemidwest" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Congratulations to Dave of Lovestar Factory Team for making it to the podium today! Tough race, great ride!! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cylcocrossinthemidwest</small>
+                           </div>
+                           <img src="../lsphotos/image000238.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000671.jpg" title="Good times at the Rhythm and blues CX review in Evanston #lovestarfactoryteam #lsb photo credit to @theandyhudson" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Good times at the Rhythm and blues CX review in Evanston #lovestarfactoryteam #lsb photo credit to @theandyhudson</small>
+                           </div>
+                           <img src="../lsphotos/image000671.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000672.jpg" title="Managed my first podium finish today - in the rain and mud no less. Great times with #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -168,97 +259,6 @@
                               <small>being a new fat-bike owner I am actually excited for winter this year...however, the last couple of days were a reminder that I have to make it through two months of 30-40 degree temps and rain first. #sigh #fatbike #lovestarbicyclebags #bikepacking #bikecommute</small>
                            </div>
                            <img src="../lsphotos/image000243.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000244.jpg" title="Finished up the kids #halloween costumes...rawr. #monsters #sewrad #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up the kids #halloween costumes...rawr. #monsters #sewrad #handmade #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000244.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000245.jpg" title="Sneak peak of my current work-in-progress. Most of the year I handcraft bicycle bags, but October means making #halloween costumes for my kids. Trust me, a design session with a 2 year old is quite an experience. #lovestarbicyclebags #handmade #monster #sewrad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sneak peak of my current work-in-progress. Most of the year I handcraft bicycle bags, but October means making #halloween costumes for my kids. Trust me, a design session with a 2 year old is quite an experience. #lovestarbicyclebags #handmade #monster #sewrad</small>
-                           </div>
-                           <img src="../lsphotos/image000245.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000246.jpg" title="Finished up the hanging stable at #lovestarbicyclebags HQ this past weekend." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up the hanging stable at #lovestarbicyclebags HQ this past weekend.</small>
-                           </div>
-                           <img src="../lsphotos/image000246.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000680.jpg" title="Sunrise ride with this stud. #lovestarfactoryteam #cylist #cycling #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise ride with this stud. #lovestarfactoryteam #cylist #cycling #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000680.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000247.jpg" title="Daddy / Daughter bike ride & swing adventures. #fatbike #cycling #futurecyclist #striderbike #lovestarbicyclebags #bikepacking #babysnub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Daddy / Daughter bike ride & swing adventures. #fatbike #cycling #futurecyclist #striderbike #lovestarbicyclebags #bikepacking #babysnub</small>
-                           </div>
-                           <img src="../lsphotos/image000247.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000681.jpg" title="Took the road whip out today. But the day was so beautiful, I found myself coasting on the downhills, stopping to take pictures, exploring detours, and just soaking in the gorgeousness of fall. Sometimes it's best to skip a training day. #cycling #cylist #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Took the road whip out today. But the day was so beautiful, I found myself coasting on the downhills, stopping to take pictures, exploring detours, and just soaking in the gorgeousness of fall. Sometimes it's best to skip a training day. #cycling #cylist #bikechi #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000681.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000682.jpg" title="Fall. #cycling #cylist #lovestarfactoryteam #bmc" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fall. #cycling #cylist #lovestarfactoryteam #bmc</small>
-                           </div>
-                           <img src="../lsphotos/image000682.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
