--- a/instagram20.html
+++ b/instagram20.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000244.jpg" title="Finished up the kids #halloween costumes...rawr. #monsters #sewrad #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up the kids #halloween costumes...rawr. #monsters #sewrad #handmade #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000244.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000245.jpg" title="Sneak peak of my current work-in-progress. Most of the year I handcraft bicycle bags, but October means making #halloween costumes for my kids. Trust me, a design session with a 2 year old is quite an experience. #lovestarbicyclebags #handmade #monster #sewrad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sneak peak of my current work-in-progress. Most of the year I handcraft bicycle bags, but October means making #halloween costumes for my kids. Trust me, a design session with a 2 year old is quite an experience. #lovestarbicyclebags #handmade #monster #sewrad</small>
+                           </div>
+                           <img src="../lsphotos/image000245.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000246.jpg" title="Finished up the hanging stable at #lovestarbicyclebags HQ this past weekend." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up the hanging stable at #lovestarbicyclebags HQ this past weekend.</small>
+                           </div>
+                           <img src="../lsphotos/image000246.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000680.jpg" title="Sunrise ride with this stud. #lovestarfactoryteam #cylist #cycling #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride with this stud. #lovestarfactoryteam #cylist #cycling #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000680.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000247.jpg" title="Daddy / Daughter bike ride & swing adventures. #fatbike #cycling #futurecyclist #striderbike #lovestarbicyclebags #bikepacking #babysnub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Daddy / Daughter bike ride & swing adventures. #fatbike #cycling #futurecyclist #striderbike #lovestarbicyclebags #bikepacking #babysnub</small>
+                           </div>
+                           <img src="../lsphotos/image000247.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000681.jpg" title="Took the road whip out today. But the day was so beautiful, I found myself coasting on the downhills, stopping to take pictures, exploring detours, and just soaking in the gorgeousness of fall. Sometimes it's best to skip a training day. #cycling #cylist #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Took the road whip out today. But the day was so beautiful, I found myself coasting on the downhills, stopping to take pictures, exploring detours, and just soaking in the gorgeousness of fall. Sometimes it's best to skip a training day. #cycling #cylist #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000681.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000682.jpg" title="Fall. #cycling #cylist #lovestarfactoryteam #bmc" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fall. #cycling #cylist #lovestarfactoryteam #bmc</small>
+                           </div>
+                           <img src="../lsphotos/image000682.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000087.jpg" title="One more... #lovestarbicyclebags #bikepacking #cycling #handmade #sewrad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>#lovestarfactoryteam juniors squad had a big day of riding. #futurecyclist #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000688.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000689.jpg" title="#babysnub saw some BMX guys doing a bunny hop competition and decided to show off her shred skills. #babygnar #futurecyclist #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babysnub saw some BMX guys doing a bunny hop competition and decided to show off her shred skills. #babygnar #futurecyclist #cycling #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000689.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000690.jpg" title="Family fatbiking at #biketheridge2015 #babysnub #fatbike #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Family fatbiking at #biketheridge2015 #babysnub #fatbike #cycling #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000690.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000691.jpg" title="Great crew reppin' the #lovestarfactoryteam colors this morning." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Great crew reppin' the #lovestarfactoryteam colors this morning.</small>
-                           </div>
-                           <img src="../lsphotos/image000691.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000692.jpg" title="#lovestarfactoryteam Hasselhoff ride. Mornings are getting darker...sigh. #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam Hasselhoff ride. Mornings are getting darker...sigh. #cycling #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000692.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000254.jpg" title="Bridge crossing at dusk on my commute home tonight. #fatbike #bikepacking #bikecommute #framebag #lovestarbicyclebags #cycling #cyclist #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Bridge crossing at dusk on my commute home tonight. #fatbike #bikepacking #bikecommute #framebag #lovestarbicyclebags #cycling #cyclist #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000254.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000537.jpg" title="@casadewaggoner double hitting the 4 and the 4/5s races. #lovestarfactoryteam #chicagocrosscup #caldwellcx #cyclocross #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@casadewaggoner double hitting the 4 and the 4/5s races. #lovestarfactoryteam #chicagocrosscup #caldwellcx #cyclocross #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000537.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000693.jpg" title="#lovestarfactoryteam kicking off the #chicagocrosscup at the relocated #caldwellcx race today! #cyclocross #cx #cycling #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam kicking off the #chicagocrosscup at the relocated #caldwellcx race today! #cyclocross #cx #cycling #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000693.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
