--- a/instagram30.html
+++ b/instagram30.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000365.jpg" title="Lovestar Factory Team's first junior racer looks forward to crushing local push bike races in the 2-3 year old division. #lovestarbicyclebags #futurecyclist #championsystems #dadlife #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team's first junior racer looks forward to crushing local push bike races in the 2-3 year old division. #lovestarbicyclebags #futurecyclist #championsystems #dadlife #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000365.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000366.jpg" title="Happy Valentines Day from Lovestar Bicycle Bags! #lovestarbicyclebags #handmade #valentine #cycling #bicyclebag #bicycle #bikechi #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Happy Valentines Day from Lovestar Bicycle Bags! #lovestarbicyclebags #handmade #valentine #cycling #bicyclebag #bicycle #bikechi #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000366.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000367.jpg" title="New fork for the #Moots. #ritchey CX Carbon disc fork really spices up the front end of this bike. Thanks @velosmith for the install and cutting work. One step closer to this year's Barry Roubaix #cyclocross #gravel #gravelgrinder #titanium #bikechi #bicycle #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New fork for the #Moots. #ritchey CX Carbon disc fork really spices up the front end of this bike. Thanks @velosmith for the install and cutting work. One step closer to this year's Barry Roubaix #cyclocross #gravel #gravelgrinder #titanium #bikechi #bicycle #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000367.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000368.jpg" title="Re-gram o a customer's custom framebag. Lots of cargo space and kept the black/lime color way going strong #custom #lovestarbicyclebags #madeinteUSA #handmade #cycling #bicycle #bicyclebag #bikepacking #framebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Re-gram o a customer's custom framebag. Lots of cargo space and kept the black/lime color way going strong #custom #lovestarbicyclebags #madeinteUSA #handmade #cycling #bicycle #bicyclebag #bikepacking #framebag</small>
+                           </div>
+                           <img src="../lsphotos/image000368.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000369.jpg" title="January edition of the Century of the Month Club! Riding one 100+ mile ride every month for 2015. #cycling #bicycle #bikewinter #century #centuryride #moots #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>January edition of the Century of the Month Club! Riding one 100+ mile ride every month for 2015. #cycling #bicycle #bikewinter #century #centuryride #moots #lovestarbicyclebags #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000369.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000370.jpg" title="Team colors. #lovestarbicyclebags #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Team colors. #lovestarbicyclebags #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000370.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000371.jpg" title="Snow means fatbikes & fatbikes means framebags! #lovestarbicyclebags #handmade #fatbike #bikepacking #cycling #wintercycling #SewRad #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Snow means fatbikes & fatbikes means framebags! #lovestarbicyclebags #handmade #fatbike #bikepacking #cycling #wintercycling #SewRad #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000371.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000372.jpg" title="Here at Lovestar Bicycle Bags, I mostly make cycling gear. But every once in a while I make miniature disco queen outfits for my daughter to wear at the family's annual Christmas murder mystery dinner party. #keepingItWeird #murdermysteryparty #sewRad #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>My bike in adventure mode post #cyclocross season. Did just over 50 miles today. 34 degrees with freezing rain and some snow. Was able to hit the #DPRT the #GreenBayTrail an the #McClory path all in the same ride. #lovestarbicyclebags #cycling #gravelgrinder #moots #adventureisOutThere #cx</small>
                            </div>
                            <img src="../lsphotos/image000384.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000385.jpg" title="Got a whole lotta zipper going into this custom framebag. #bikepacking #niner #handmade #lovestarbicyclebags #framebag #madeintheUSA  #bicycle #cycling #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Got a whole lotta zipper going into this custom framebag. #bikepacking #niner #handmade #lovestarbicyclebags #framebag #madeintheUSA  #bicycle #cycling #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000385.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000386.jpg" title="Sweet apron bro. #lovestarbicyclebags shop aprons in the works. Look for them on my ETSY page in the next couple of weeks. Custom colors will be available, more details to follow soon! #bikeshop #tools #bikemechanic #bicycle #cycling #handmade #madeintheUSA #custom" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sweet apron bro. #lovestarbicyclebags shop aprons in the works. Look for them on my ETSY page in the next couple of weeks. Custom colors will be available, more details to follow soon! #bikeshop #tools #bikemechanic #bicycle #cycling #handmade #madeintheUSA #custom</small>
-                           </div>
-                           <img src="../lsphotos/image000386.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000387.jpg" title="Thanks #Jayloophotography for capturing so many great shots all season! #MontroseCX #cyclocross #cx #sandpit #cycling  #chicagocrosscup #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Thanks #Jayloophotography for capturing so many great shots all season! #MontroseCX #cyclocross #cx #sandpit #cycling  #chicagocrosscup #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000387.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000388.jpg" title="An exciting race to the finish! Cold. Dirt. Deep sand. Nearly dark. Wind off Lake Michigan. A perfect race day!!! Go Lovestar!!! Illinois Cyclocross Championship Montrose Harbor! #cyclocrosschicago #cycling #cyclocross #elliotlovestar #elliotlovestarbicycle #lovestar #lovestarbicyclebags #lovestarfactoryteam #bikeracing #bikechicago #bicycles" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>An exciting race to the finish! Cold. Dirt. Deep sand. Nearly dark. Wind off Lake Michigan. A perfect race day!!! Go Lovestar!!! Illinois Cyclocross Championship Montrose Harbor! #cyclocrosschicago #cycling #cyclocross #elliotlovestar #elliotlovestarbicycle #lovestar #lovestarbicyclebags #lovestarfactoryteam #bikeracing #bikechicago #bicycles</small>
-                           </div>
-                           <img src="../lsphotos/image000388.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000389.jpg" title="Lovestar Factory Team representing at a very sandy #MontroseCX State championship race. #cyclocross #cx #bikechi #chicrosscup #cycling #sandpits #lovestarbicyclebags #lovestarbicycles #bikerace" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team representing at a very sandy #MontroseCX State championship race. #cyclocross #cx #bikechi #chicrosscup #cycling #sandpits #lovestarbicyclebags #lovestarbicycles #bikerace</small>
-                           </div>
-                           <img src="../lsphotos/image000389.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000390.jpg" title="Lovestar Factory Team @ MontroseCx Illinois State Championships! #cyclocrosschicago #cyclocross #cycling #lovestar #lovestarbicyclebags #lovestarfactoryteam #bikeracing" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Lovestar Factory Team @ MontroseCx Illinois State Championships! #cyclocrosschicago #cyclocross #cycling #lovestar #lovestarbicyclebags #lovestarfactoryteam #bikeracing</small>
-                           </div>
-                           <img src="../lsphotos/image000390.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000391.jpg" title="Final race of the season at Montrose Harbor. Illinois State Championships. Lovestar Factory Team finished strong! Go Lovestar!!! #montrosecx #chicagoracing #chicagocyclocross #chicagocycling #lovestar #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Final race of the season at Montrose Harbor. Illinois State Championships. Lovestar Factory Team finished strong! Go Lovestar!!! #montrosecx #chicagoracing #chicagocyclocross #chicagocycling #lovestar #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago</small>
-                           </div>
-                           <img src="../lsphotos/image000391.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
