--- a/instagram36.html
+++ b/instagram36.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000484.jpg" title="Worked at Bike the Drive this morning. My day stared around 2:30am...saw a beautiful sunrise over Lake Michigan, got to ride a small section of a car-free Lake Shore Drive, saw some killer fat bikes from @wisemanframeworks and helped a lot of people get out on bikes today. All in all not a bad way to spend a day. #bikethedrive #bikechi #cycling #lovestarbicyclebags #chicago #lakeshoredrive #carfree" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Worked at Bike the Drive this morning. My day stared around 2:30am...saw a beautiful sunrise over Lake Michigan, got to ride a small section of a car-free Lake Shore Drive, saw some killer fat bikes from @wisemanframeworks and helped a lot of people get out on bikes today. All in all not a bad way to spend a day. #bikethedrive #bikechi #cycling #lovestarbicyclebags #chicago #lakeshoredrive #carfree</small>
+                           </div>
+                           <img src="../lsphotos/image000484.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000485.jpg" title="Found some virgin bike trail pavement today. #bikechi #cycling #lovestarbicyclebags #summer #mcclorypath" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Found some virgin bike trail pavement today. #bikechi #cycling #lovestarbicyclebags #summer #mcclorypath</small>
+                           </div>
+                           <img src="../lsphotos/image000485.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000486.jpg" title="Daddy / daughter recovery ride today. #bikechi #cycling #futurecyclist #lovestarbicyclebags #moots #psyhlox" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Daddy / daughter recovery ride today. #bikechi #cycling #futurecyclist #lovestarbicyclebags #moots #psyhlox</small>
+                           </div>
+                           <img src="../lsphotos/image000486.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000487.jpg" title="Almanzo 100 2014. We came, we saw, we crushed gravel. #almanzorv #almanzo100 #fixitsticks #racedots #gravelgrinder #gravel #lovestarbicyclebags #moots" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Almanzo 100 2014. We came, we saw, we crushed gravel. #almanzorv #almanzo100 #fixitsticks #racedots #gravelgrinder #gravel #lovestarbicyclebags #moots</small>
+                           </div>
+                           <img src="../lsphotos/image000487.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000488.jpg" title="Successful Almanzo 100! #almanzorv #almanzo100 #gravel #gravelgrinder #lovestarbicyclebags #cycling #moots" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Successful Almanzo 100! #almanzorv #almanzo100 #gravel #gravelgrinder #lovestarbicyclebags #cycling #moots</small>
+                           </div>
+                           <img src="../lsphotos/image000488.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000489.jpg" title="Blue & white Lovestar Saddle Pack for a team mate. #handmade #lovestarbicyclebags #cycling #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Blue & white Lovestar Saddle Pack for a team mate. #handmade #lovestarbicyclebags #cycling #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000489.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000490.jpg" title="Chilly rides deserve warm drinks. #lovestarbicyclebags #airattack #cycling #bikechi #espresso" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Chilly rides deserve warm drinks. #lovestarbicyclebags #airattack #cycling #bikechi #espresso</small>
+                           </div>
+                           <img src="../lsphotos/image000490.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000491.jpg" title="Flower power...meet pedal power. #lovestarbicyclebags #bikechi #cycling #moots" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>Waffle Ride! 60 miles, 1 tricky flat, 4 killer waffles. #delbescorner #cycling #bikechi #bikeevanston #lovestarbicyclebags #waffles</small>
                            </div>
                            <img src="../lsphotos/image000503.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000504.jpg" title="New tires...#gravelgrinder #clement #moots #lovestarbicyclebags #psychloX" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New tires...#gravelgrinder #clement #moots #lovestarbicyclebags #psychloX</small>
-                           </div>
-                           <img src="../lsphotos/image000504.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000505.jpg" title="Ride wallet prototype 2.0 #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Ride wallet prototype 2.0 #cycling #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000505.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000506.jpg" title="Finished up a custom Lovestar frame bag for a Chicago customer. Hi-vis orange XPac sidewalls, waterproof zippers, dark orange Cordura edges, yellow interior. #bikepacking #bikechi #cycling #handmade #framebag #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a custom Lovestar frame bag for a Chicago customer. Hi-vis orange XPac sidewalls, waterproof zippers, dark orange Cordura edges, yellow interior. #bikepacking #bikechi #cycling #handmade #framebag #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000506.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000507.jpg" title="Time to call it a night...made some good progress on this custom Lovestar Frame bag. #handmade #cycling #bikepacking #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Time to call it a night...made some good progress on this custom Lovestar Frame bag. #handmade #cycling #bikepacking #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000507.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000508.jpg" title="Finishing up a Black & Pink Lovestar Saddle Pack tonight. #handmadeisbetter #handmade #cycling #lovestarbicyclebags #bikechi #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finishing up a Black & Pink Lovestar Saddle Pack tonight. #handmadeisbetter #handmade #cycling #lovestarbicyclebags #bikechi #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000508.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000509.jpg" title="Best way to recover from a hard ride...go for a ride #cycling #bikechi  #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Best way to recover from a hard ride...go for a ride #cycling #bikechi  #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000509.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000510.jpg" title="60 mile Waffle Ride. #cycling #waffles #lovestarbicyclebags #bikechi #delbescorner" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>60 mile Waffle Ride. #cycling #waffles #lovestarbicyclebags #bikechi #delbescorner</small>
-                           </div>
-                           <img src="../lsphotos/image000510.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
