--- a/instagram37.html
+++ b/instagram37.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000504.jpg" title="New tires...#gravelgrinder #clement #moots #lovestarbicyclebags #psychloX" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New tires...#gravelgrinder #clement #moots #lovestarbicyclebags #psychloX</small>
+                           </div>
+                           <img src="../lsphotos/image000504.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000505.jpg" title="Ride wallet prototype 2.0 #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Ride wallet prototype 2.0 #cycling #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000505.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000506.jpg" title="Finished up a custom Lovestar frame bag for a Chicago customer. Hi-vis orange XPac sidewalls, waterproof zippers, dark orange Cordura edges, yellow interior. #bikepacking #bikechi #cycling #handmade #framebag #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a custom Lovestar frame bag for a Chicago customer. Hi-vis orange XPac sidewalls, waterproof zippers, dark orange Cordura edges, yellow interior. #bikepacking #bikechi #cycling #handmade #framebag #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000506.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000507.jpg" title="Time to call it a night...made some good progress on this custom Lovestar Frame bag. #handmade #cycling #bikepacking #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Time to call it a night...made some good progress on this custom Lovestar Frame bag. #handmade #cycling #bikepacking #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000507.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000508.jpg" title="Finishing up a Black & Pink Lovestar Saddle Pack tonight. #handmadeisbetter #handmade #cycling #lovestarbicyclebags #bikechi #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finishing up a Black & Pink Lovestar Saddle Pack tonight. #handmadeisbetter #handmade #cycling #lovestarbicyclebags #bikechi #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000508.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000509.jpg" title="Best way to recover from a hard ride...go for a ride #cycling #bikechi  #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Best way to recover from a hard ride...go for a ride #cycling #bikechi  #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000509.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000510.jpg" title="60 mile Waffle Ride. #cycling #waffles #lovestarbicyclebags #bikechi #delbescorner" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>60 mile Waffle Ride. #cycling #waffles #lovestarbicyclebags #bikechi #delbescorner</small>
+                           </div>
+                           <img src="../lsphotos/image000510.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000511.jpg" title="Haven't been able to get a whole lot of work done lately...so it felt good to finally sit down and make up this bag for a friend. Stealthy black with a bit of red flash on the inside. #lovestarbicyclebags #bikepacking #handmade #cycling" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>Sketchy beginnings... #lovestarbicyclebags #handmade #bikepacking #gravelgrinder</small>
                            </div>
                            <img src="../lsphotos/image000523.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000524.jpg" title="A good morning preview of my latest project. This set of matching bags (there will be a frame bag too) will be traveling to the Almanzo 100 in all of its rad-ness. #lovestarbicyclebags #bikechi #almanzo100 #gravel #bikepacking #handmade #ineedsunglasses" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A good morning preview of my latest project. This set of matching bags (there will be a frame bag too) will be traveling to the Almanzo 100 in all of its rad-ness. #lovestarbicyclebags #bikechi #almanzo100 #gravel #bikepacking #handmade #ineedsunglasses</small>
-                           </div>
-                           <img src="../lsphotos/image000524.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000525.jpg" title="Prototype gas tank bag... #lovestarbicyclebags #handmade #blackisboring" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Prototype gas tank bag... #lovestarbicyclebags #handmade #blackisboring</small>
-                           </div>
-                           <img src="../lsphotos/image000525.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000526.jpg" title="If you're riding tubulars, a compact secure storage for a spare can be tough to come by. Check out the latest Lovestar Bicycle Bags prototype! #tubulars #lovestarbicyclebags #bikechi #pinstripes #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>If you're riding tubulars, a compact secure storage for a spare can be tough to come by. Check out the latest Lovestar Bicycle Bags prototype! #tubulars #lovestarbicyclebags #bikechi #pinstripes #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000526.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000527.jpg" title="Stylish, compact & secure storage for on the ride essentials #instacollage #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Stylish, compact & secure storage for on the ride essentials #instacollage #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000527.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000528.jpg" title="Finished up a batch of black/grey/orange bags. All of them share a wicked orange interior. 3 Cordura & 3 XPac bags in this run. #lovestarbicyclebags #handmade #bikechi #bicyclestyle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a batch of black/grey/orange bags. All of them share a wicked orange interior. 3 Cordura & 3 XPac bags in this run. #lovestarbicyclebags #handmade #bikechi #bicyclestyle</small>
-                           </div>
-                           <img src="../lsphotos/image000528.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000529.jpg" title="There's a whole lotta orange Saddle Pack happening tonight. #lovestarbicyclebags #bikechi #handmade #customcolors" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>There's a whole lotta orange Saddle Pack happening tonight. #lovestarbicyclebags #bikechi #handmade #customcolors</small>
-                           </div>
-                           <img src="../lsphotos/image000529.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000530.jpg" title="Finished up a Lovely pair of saddle packs. They're being delivered tomorrow as a customer's Valentines Day gift! #lovestarbicyclebags #valentinesday" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a Lovely pair of saddle packs. They're being delivered tomorrow as a customer's Valentines Day gift! #lovestarbicyclebags #valentinesday</small>
-                           </div>
-                           <img src="../lsphotos/image000530.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
